<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hi_welcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hi_welcome"
        android:textColor="#C4C4C4"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <TextView
        android:id="@+id/emailAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/email_adress"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/emailPass"
        app:layout_constraintTop_toBottomOf="@id/hi_welcom" />

    <EditText
        android:id="@+id/emailPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="4dp"
        android:background="@color/white"
        android:hint="@string/enter_your_email"
        android:textColor="@color/black"
        android:textColorHint="#C4C4C4"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/emailAd"
        app:layout_constraintTop_toBottomOf="@id/emailAd" />

    <TextView
        android:id="@+id/passTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/emailPass"
        app:layout_constraintTop_toBottomOf="@id/emailPass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColorHint="#C4C4C4"
        app:helperTextTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/passTx"
        app:layout_constraintStart_toStartOf="@id/passTx"
        app:layout_constraintTop_toBottomOf="@id/passTx"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter_your_password"
            android:textColor="@color/black"
            android:textColorHint="#C4C4C4"
            android:textSize="18sp"
            app:helperTextTextColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#41C485"
        android:padding="10dp"
        android:text="@string/log_inn"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/passed"
        app:layout_constraintTop_toBottomOf="@id/passed" />

    <TextView
        android:id="@+id/frgTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgotten_your_password"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logBtn" />

    <FrameLayout
        android:id="@+id/signInwith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frgTxt">

        <View
            android:id="@+id/vector_17"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#C4C4C4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/or_sign_in_with" />

    </FrameLayout>

    <ImageView
        android:id="@+id/socialM"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/img_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInwith" />

    <TextView
        android:id="@+id/HaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#C4C4C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/socialM" />

    <TextView
        android:id="@+id/createAcBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_an_account"
        android:textColor="#41C485"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HaveAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>
